css/style.css
body {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
}

button {
  cursor: pointer;
  border: none;
}

/* General classes */
.bg-gray {
  background-color: #e2e2e2;
}

.bg-green {
  background-color: #6bb166;
}

.bg-blue {
  background-color: #2c7787;
}

.bg-pink {
  background-color: #db9494;
}

.text-d-gray {
  color: #838383 !important;
}

.d-flex {
  display: flex;
}

.justify-content-between {
  justify-content: space-between;
}

.align-items-center {
  align-items: center;
}

.py-0 {
  padding: 0px;
}

.my-0 {
  margin: 0px;
}

ul li {
  list-style: none;
}

/* start nav */
nav {
  margin: 0px;
  padding-top: 3px;

}

.boards button {
  margin: 0px;
  border: none;
  border-top-left-radius: 0.5rem;
  border-top-right-radius: 0.5rem;
  padding: 8px 21px;
  font-size: 15px;
  background-color: transparent;
}

.boards .active {
  background-color: #ffffff;
}

.nav-buttons {
  font-size: 13px;
}

.add-note {
  border-radius: 50%;
  width: 28px;
  height: 28px;
  line-height: 28px;
  border: 0px;
  font-size: 12px;
  display: flex;
  align-items: center;
  justify-content: center;
}

input {
  outline: none;
  border: none;
}


.search {
  background-color: #ffffff;
  padding: 3px 30px 3px 13px;
  border-radius: 1rem;
  margin-right: 20px;
  display: flex;
  justify-content: space-between;

}

#search {
  margin-top: 8px;
}

.search .fa-magnifying-glass {
  margin-top: 8px;
  margin-right: 5px;
}

.nav-buttons {
  padding-right: 20px;
  padding-bottom: 3px;
  margin-bottom: 3px;
}

nav .nav-buttons .fa-trash {
  color: #a55353;
  padding-right: 4px;
}

.nav-buttons button {
  border-radius: 1rem;
  padding: 6px 15px;
  margin-left: 5px;
  color: #ffffff;
}

.nav-buttons button:hover,
.nav-buttons button:focus {
  background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0 0);
}

/* tabs */
.tab-content-box .tab-content {
  display: none;
}

.tab-content-box .tab-content.active {
  display: block;
}

.note {
  min-width: 120px;
  min-height: 120px;
  width: 120px;
  height: 120px;
  background-color: #efefef;
  border: transparent;
  margin: 10px;
  font-size: 5px;
  box-shadow: 1px 1px 2px gray;
  padding: 5px;
  position: fixed;
  resize: both;
  overflow :hidden;

}

.note-date {
  position: absolute;
  bottom: 5px;
  left: 5px;
  font-size: 7px;
  color: gray;
  transition: all 0.3s ease;
}

.note-input {
  width: 100%;
  height: 40%;
  border: none;
  outline: none;
  color: gray;
  background: transparent;
  font-size: 10px;
  padding: 5px;
  margin-bottom: 5px;
  white-space: wrap;
  overflow-x: auto;
  resize: none;
}


.note:hover {
  border: 2px solid black;
  box-shadow: 2px 2px 4px gray;
  border-radius: 3px;
  transition: all 0.1s ease-in-out;
}
.color-controls{
  display: flex;
  gap: 3px;
}
.hover-controls {
  width: auto;
  height: 50%;
  display: flex;
  display: none;
  justify-content: space-between;
  align-items: end;
}


.color-dot {
  width: 12px;
  height: 12px;
  border-radius: 50%;
  border: 1px solid black;
  cursor: pointer;
}

.color-dot.red {
  background-color: #FEAEAE;
}

.color-dot.green {
  background-color: #CDFCB6;
}

.color-dot.blue {
  background-color: #B6D7FC;
}

.color-dot.gray {
  background-color: #e8eaed;
}

.delete-btn {
  width: 15px;
  height: 15px;
  background-color: #ee4539;
  border: none;
  border-radius: 50%;
  color: #fff;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 14px;
}

.delete-btn:hover {
  background-color: #d32f2f;
}

input::placeholder {
  /*Timestamp Design*/
  position: fixed;
  bottom: 5px;
  left: 5px;
  color: rgb(152, 150, 150);
}

/* end nav */

.board-body {
  width: auto;
  height: auto;
  display: flex;
  flex-wrap: wrap;
}
/* Responsive design  */

@media (max-width: 480px) {
  nav {
    display: flex;
    flex-direction: column;
    justify-content: center;
    position: relative;
  }
  .search {
    width: 100%;
    margin-bottom: 10px;
    border-radius: 0.5rem;
    margin-right :0;
  }

  .nav-buttons {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    flex-wrap: wrap;
    margin-top: 10px;
    margin-bottom: 25px;
  }

  .boards {
    display: flex;
    flex-direction: row;
    position: absolute;
    margin: 0px;
    bottom: 0;
    left: 0;
    width: 40%; 
  }
  
}


@media (min-width: 481px) and (max-width: 629px) {
  nav {
  
    position : relative;
  }

  .search {
    margin-right: 10px;
    padding: 3px 10px;
  }


  
  .boards {
    flex: 1;
    display: flex;
    left : 0;
    bottom: 0;
    position :absolute;
    width :40%;
    height : 30%;
   
  }

  .nav-buttons {
    flex: 1;
    display: flex;
    justify-content: flex-end;
    gap: 5px;
  }

  button {
    font-size: 10px;
    padding: 4px 8px;
    
  }

  .add-note {
    width: 20px;
    height: 20px; 
    line-height: 20px;
   
 
  }

  

}


  

